change pakce name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo",
+  "name": "jancedemo",
   "version": "1.0.0",
   "description": "start my first open source ",
   "main": "src/index.js",
