--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "jancedemo",
-  "version": "0.1.0-beta.1",
+  "version": "0.0.0-development",
   "description": "start my first open source ",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "commit":"git-cz",
+    "test": "mocha src/index.test.js -w",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/janceChun/demo.git"
+    "url": "https://github.com/janceChun/demo.git"
   },
   "keywords": [
     "first",
@@ -23,5 +25,15 @@
   "homepage": "https://github.com/janceChun/demo#readme",
   "dependencies": {
     "unique-random-array": "1.0.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "commitizen": "^2.9.6",
+    "cz-conventional-changelog": "^2.0.0",
+    "mocha": "^3.2.0",
+    "semantic-release": "^6.3.2"
+  },
+  "czConfig":{
+    "path":"node_modules/cz-conventional-changelog"
   }
 }
