--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jancedemo",
-  "version": "0.0.0-development",
+  "version": "0.2.0",
   "description": "start my first open source ",
   "main": "src/index.js",
   "scripts": {
