--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "start my first open source ",
   "main": "src/index.js",
   "scripts": {
-    "commit":"git-cz",
+    "commit": "git-cz",
     "test": "mocha src/index.test.js -w",
     "test:single": "mocha src/index.test.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
@@ -31,10 +31,16 @@
     "chai": "^3.5.0",
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.0.0",
+    "ghooks": "^2.0.0",
     "mocha": "^3.2.0",
     "semantic-release": "^6.3.2"
   },
-  "czConfig":{
-    "path":"node_modules/cz-conventional-changelog"
+  "czConfig": {
+    "path": "node_modules/cz-conventional-changelog"
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit":"npm run test:single"
+    }
   }
 }
