--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jancedemo",
-  "version": "0.2.0-beta.3",
+  "version": "1.0.0",
   "description": "start my first open source ",
   "main": "src/index.js",
   "scripts": {
@@ -40,7 +40,7 @@
   },
   "config": {
     "ghooks": {
-      "pre-commit":"npm run test:single"
+      "pre-commit": "npm run test:single"
     }
   }
 }
